# szakdolgozat

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_source.sh  model_testing.py  reinforcement_learning.py  representation_mapper.cpp  requirements.txt  setup.py  test.py  test_results_to_latex_table.py
SproutsML/: RNN.py  __init__.py  models.py
code/src/: setup.py
glop-2.2/version2.2/: Makefile
glop-2.2/version2.2/releaseTmps/: moc_databasebutton.cpp  moc_error.cpp  moc_gamewidget.cpp  moc_glopwidget.cpp  moc_interfacewidget.cpp  moc_tracewidget.cpp  moc_widgetpopup.cpp  qrc_glop.cpp
glop-2.2/version2.2/script/: release_tux
glop-2.2/version2.2/src/sprouts/: sproutsglobal.cpp
